# researcher-ai

./: .env.template  .gitignore  AGENTS.md  Design.md  IMPLEMENTATION_GAPS_2026-03-16.md  IMPLEMENTATION_PLAN.md  NEXT_STEPS_REPO_RESTRUCTURE.md  README.md  SYSTEM_GUIDELINES.md  TECHNICAL_OVERVIEW.md  capabilities.md  debug_determinism.py  pyproject.toml  requirements.txt  test_results.txt
agents/: README.md  __init__.py  loop.py
cli/: __init__.py  app.py  formatters.py  inspector.py  runner.py
core/: README.md  __init__.py  serialization.py
docs/: Design.md  Execution Plan.md  IMPLEMENTATION_PLAN.md  TECHNICAL_OVERVIEW.md  architecture_hld.md  architecture_lld.md  capabilities.md  ingestion_pipeline.md  scholaros_e2e_conversion_plan.md  smoke_test_report.md  structured_ingestion_pipeline.md
evaluation/: __init__.py  annotation_schema.py  benchmark_runner.py  metrics.py
html_ingestion_poc/: __init__.py
infra/: README.md
outputs/: brutal_150_audit.json  brutal_150_metadata.json  brutal_150_summary.md
reports/: e2e_full_report.json  e2e_full_report.md  ingestion_50_paper_report.md  ingestion_50_paper_report_v2.md  ingestion_benchmark_results.json  ingestion_benchmark_results_v2.json  ingestion_benchmark_results_v3_full62_uncached.json  ingestion_benchmark_results_v3_publisher_aware.json  ingestion_integrity_report.md  source_comparison_50_results.json
scripts/: batch_eval_pipeline.py  brutal_150_e2e_audit.py  build_brutal_150_corpus.py  e2e_autopsy_real30.py  e2e_test_harness.py  generate_test_paper.py  phase5_audit_report.py  setup_ollama_gpu.sh
(+213 files in other folders)
